# photo-duplicate-finder

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json
crates/photo-core/: Cargo.toml
crates/photo-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/scan-engine/: Cargo.toml
crates/scan-engine/src/: cluster.rs  engine.rs  exif.rs  hash.rs  lib.rs  paths.rs  raw.rs  scan.rs  thumbnail.rs
crates/scan-engine/src/db/: mod.rs  repository.rs  schema.sql
crates/scan-engine/tests/: db_test.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: CompareSlider.tsx  ImageTile.tsx  Lightbox.tsx  MetadataBar.tsx  SessionCard.tsx  ZoomableImage.tsx
src/components/ui/: button.tsx  card.tsx
src/hooks/: useDuplicateGroups.ts  useScanProgress.ts
src/lib/: api.ts  suggestKeeper.test.ts  types.ts  utils.ts
src/pages/: HomePage.tsx  ReviewPage.tsx  ScanPage.tsx
