[workspace]
resolver = "2"
members = [
    "crates/photo-core",
    "crates/scan-engine",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["muratyuksel"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
