[package]
name = "scan-engine"
version.workspace = true
edition.workspace = true

[dependencies]
photo-core = { path = "../photo-core" }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jwalk = "0.8"
rayon = "1"
blake3 = "1"
memmap2 = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff"] }
image_hasher = "3"
kamadak-exif = "0.6"
strsim = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"
trash = "5"
sha2 = "0.10"
hex = "0.4"
dirs = "6"

[dev-dependencies]
tempfile = "3"
